Removed old or otherwise unused GLSL.

--- a/share/shaders/billboards/Makefile
+++ b/share/shaders/billboards/Makefile
@@ -1,6 +1,6 @@
 all: billboard.vert.spv billboard.frag.spv
 
-billboard.vert.spv: billboard.vert ../scene_graph/camera.glsl billboard.glsl
+billboard.vert.spv: billboard.vert billboard.glsl ../scene_graph/camera.glsl
 	glslc -O -g -c billboard.vert
 
 billboard.frag.spv: billboard.frag
